<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    android:background="#E8EDF2"
    android:gravity="center">


    <RelativeLayout
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="Profile Image"
            android:scaleType="centerCrop"
            android:src="@drawable/profile" />

        <ImageButton
            android:id="@+id/edit_profile_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@id/profile_image_view"
            android:layout_alignBottom="@id/profile_image_view"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="-9dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Edit Profile Image"
            android:padding="4dp"
            android:src="@drawable/ic_edit"
            android:drawableEnd="@drawable/ic_arrow" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/about_edit_text"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="top"
            android:hint="About"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:maxLines="10"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/whatevs"
            android:text="@string/save_button"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>