<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@android:color/transparent">

    <HorizontalScrollView
        android:id="@+id/filter_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filter_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:singleSelection="false">

            <!-- "Last 7 Days" Chip -->
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_last_7_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_7_days"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                />

            <!-- "Clear All" Chip -->
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_clear_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_all"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                app:checkedIconVisible="false"/>

            <!-- Mood Chips -->
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mood_anger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Angry"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mood_confusion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confused"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mood_disgust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disgusted"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mood_fear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Afraid"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mood_happiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Happy"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mood_sadness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sad"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mood_shame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ashamed"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mood_surprise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Surprised"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mood_calm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calm"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mood_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Private"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                />


        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
