...
            android:queryHint="Search..." />
        <Space
            android:layout_width="12dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/bg_search_view"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
...
                android:layout_marginStart="2dp" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/filter_bar_fragment_container"
        android:name="com.example.canada_geese.Fragments.FilterBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
